Inizio Creazione Menu

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -25,7 +25,7 @@
 </head>
 
 
-<body ng-app="batapp" ng-controller="mainCtrl">
+<body ng-app="batapp" ng-controller="mainCtrl" style="background-color:#1f1f1f;">
     <side-menus>
 
     <!-- Center content -->
@@ -35,6 +35,22 @@
             <h1 class="title">BatApp</h1>
         </header>
         <content has-header="true">
+            <div class="row">
+                <div class="col">menu1</div>
+                <div class="col">menu2</div>
+            </div>
+            <div class="row">
+                <div class="col">menu3</div>
+                <div class="col">menu4</div>
+            </div>
+            <div class="row">
+                <div class="col">menu5</div>
+                <div class="col">menu6</div>
+            </div>
+            <div class="row">
+                <div class="col">menu7</div>
+                <div class="col">menu8</div>
+            </div>
         </content>
     </pane>
 
