--- a/www/index.html
+++ b/www/index.html
@@ -22,10 +22,25 @@
     <!-- Needed for Cordova/PhoneGap -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <style type="text/css">
+        .row{
+            display: table-row;
+            height: 12.5%;
+        }
+        .col{
+            display: table-cell;
+            width: 50%;
+        }
+        .scroll{
+            display: table;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 
-<body ng-app="batapp" ng-controller="mainCtrl">
+<body ng-app="batapp" ng-controller="mainCtrl" style="background-color:#1f1f1f;">
     <side-menus>
 
     <!-- Center content -->
@@ -35,6 +50,22 @@
             <h1 class="title">BatApp</h1>
         </header>
         <content has-header="true">
+            <div class="row">
+                <div class="col">menu1</div>
+                <div class="col">menu2</div>
+            </div>
+            <div class="row">
+                <div class="col">menu3</div>
+                <div class="col">menu4</div>
+            </div>
+            <div class="row">
+                <div class="col">menu5</div>
+                <div class="col">menu6</div>
+            </div>
+            <div class="row">
+                <div class="col">menu7</div>
+                <div class="col">menu8</div>
+            </div>
         </content>
     </pane>
 
