--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
 
-
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="bower_components/ionic/dist/css/ionic.css">
 
     <script src="bower_components/ionic/dist/js/ionic.js"></script>
@@ -22,30 +22,63 @@
     <!-- Needed for Cordova/PhoneGap -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <style type="text/css">
+        .scroll{
+            width: 100%;
+            height: 100%;
+        }
+
+        .row{
+            height: 25.5%;
+        }
+
+        .col{
+            width: 50%;
+            font-family: 'Open Sans';
+            font-style: bold;
+            font-weight: 800;
+            text-align: center;
+            font-size: 1.4em;
+            position: relative;
+        }
+
+        #wrapper{
+            background-color: #1c242d;
+            color: #fff;
+        }
+
+        .mnitem{
+            width: 150px;
+            height: 150px;
+            background-color: #343c56;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -75px 0 0 -75px;
+            line-height: 1.4;
+        }
+    </style>
 </head>
-
-
-<body ng-app="batapp" ng-controller="mainCtrl" style="background-color:#1f1f1f;">
-    <side-menus>
-
-    <!-- Center content -->
-    <pane side-menu-content>
-        <header class="bar bar-header bar-dark">
-            <button class="button button-icon" ng-click="openLeft()"><i class="icon ion-navicon"></i></button>
-            <h1 class="title">BatApp</h1>
-        </header>
-        <content has-header="true">
+<body ng-app="batapp" ng-controller="mainCtrl">
+    <pane id="wrapper">
+        <content has-header="false" scroll="false">
             <div class="row">
-                <div class="col">menu1</div>
-                <div class="col">menu2</div>
+                <div class="col">
+                    <div class="mnitem">Cultura</div>
+                </div>
+                <div class="col">
+                    <div class="mnitem">
+                        <button class="button button-clear button-block">Ambiente</button>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="col">menu3</div>
-                <div class="col">menu4</div>
+                <div class="col"><div class="mnitem">Imprenditoria Giovanile</div></div>
+                <div class="col"><div class="mnitem">Eventi</div></div>
             </div>
             <div class="row">
-                <div class="col">menu5</div>
-                <div class="col">menu6</div>
+                <div class="col"><div class="mnitem">Sport e<br />Tempo Libero</div></div>
+                <div class="col"><div class="mnitem">Curiosit&agrave;</div></div>
             </div>
             <div class="row">
                 <div class="col">menu7</div>
@@ -53,14 +86,43 @@
             </div>
         </content>
     </pane>
+<!--    <side-menus>
 
-    <!-- Left menu -->
-    <side-menu side="left">
-    <header class="bar bar-header bar-dark">
-        <h1 class="title">Projects</h1>
-    </header>
-</side-menu>
+        
+        <pane side-menu-content>
+            <!--<header class="bar bar-header bar-dark">
+                <button class="button button-icon" ng-click="openLeft()"><i class="icon ion-navicon"></i></button>
+                <h1 class="title">BatApp</h1>
+            </header>
+            <content has-header="false" scroll="false">
+                <div class="row">
+                    <div class="col">
+                        <div class="mnitem">Cultura</div>
+                    </div>
+                    <div class="col"><div class="mnitem">Ambiente</div></div>
+                </div>
+                <div class="row">
+                    <div class="col"><div class="mnitem">Imprenditoria Giovanile</div></div>
+                    <div class="col"><div class="mnitem">Eventi</div></div>
+                </div>
+                <div class="row">
+                    <div class="col">menu5</div>
+                    <div class="col">menu6</div>
+                </div>
+                <div class="row">
+                    <div class="col">menu7</div>
+                    <div class="col">menu8</div>
+                </div>
+            </content>
+        </pane>
 
-</side-menus>
+        Left menu 
+        <side-menu side="left">
+            <header class="bar bar-header bar-dark">
+                <h1 class="title">Projects</h1>
+            </header>
+        </side-menu>
+
+    </side-menus>-->
 </body>
 </html>
