--- a/platforms/ios/www/cultura.html
+++ b/platforms/ios/www/cultura.html
@@ -1,122 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>BatApp</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-
-
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" href="bower_components/ionic/dist/css/ionic.css">
-
-    <script src="bower_components/ionic/dist/js/ionic.js"></script>
-    <script src="bower_components/ionic/dist/js/angular/angular.js"></script>
-    <script src="bower_components/ionic/dist/js/angular/angular-animate.js"></script>
-    <script src="bower_components/ionic/dist/js/angular/angular-route.js"></script>
-    <script src="bower_components/ionic/dist/js/angular/angular-touch.js"></script>
-    <script src="bower_components/ionic/dist/js/angular/angular-sanitize.js"></script>
-
-    <script src="bower_components/ionic/dist/js/angular-ui/angular-ui-router.js"></script>
-    <script src="bower_components/ionic/dist/js/ionic-angular.js"></script>
-
-    <!-- Needed for Cordova/PhoneGap -->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <style type="text/css">
-        .scroll{
-            width: 100%;
-            height: 100%;
-        }
-
-        #listacomuni{
-            font-family: 'Open Sans';
-            font-style: bold;
-            font-weight: 800 !important;
-            color: #fff !important;
-            line-height: 1.8;
-        }
-
-        #listacomuni .item{
-            color: #fff;
-            background: none;
-            text-align: center;
-            border: none;
-        }
-
-        #listacomuni .item a{
-            background: none;
-            font-size: 2.2em;
-            font-weight: 800;
-        }
-
-        #wrapper{
-            background-color: #e74c3c;
-            color: #fff;
-        }
-
-        .mnitem{
-            /*background-color: #343c56;*/
-            width: 150px;
-            margin: 0 auto;
-        }
-
-        #seztitle{
-            font-weight: 100;
-            font-size: 5em;
-            color: #fff;
-            text-align: center;
-            padding: 15px 40px;
-        }
-    </style>
-</head>
-<body ng-app="batapp" ng-controller="mainCtrl">
-    <pane id="wrapper">
-        <h1 id="seztitle">Cultura</h1>
-        <content has-header="true" padded="true">
+<pane id="wrapper">
+    <content has-header="false" padded="false" scroll="false">
+        <div><h1 id="seztitle">Cultura</h1></div>
+        <scroll direction="y">
             <list id="listacomuni">
                 <item ng-repeat="comune in comuni">
                     {{comune.title}}
                 </item>
             </list>
-        </content>
-    </pane>
-<!--    <side-menus>
-
-        
-        <pane side-menu-content>
-            <!--<header class="bar bar-header bar-dark">
-                <button class="button button-icon" ng-click="openLeft()"><i class="icon ion-navicon"></i></button>
-                <h1 class="title">BatApp</h1>
-            </header>
-            <content has-header="false" scroll="false">
-                <div class="row">
-                    <div class="col">
-                        <div class="mnitem">Cultura</div>
-                    </div>
-                    <div class="col"><div class="mnitem">Ambiente</div></div>
-                </div>
-                <div class="row">
-                    <div class="col"><div class="mnitem">Imprenditoria Giovanile</div></div>
-                    <div class="col"><div class="mnitem">Eventi</div></div>
-                </div>
-                <div class="row">
-                    <div class="col">menu5</div>
-                    <div class="col">menu6</div>
-                </div>
-                <div class="row">
-                    <div class="col">menu7</div>
-                    <div class="col">menu8</div>
-                </div>
-            </content>
-        </pane>
-
-        Left menu 
-        <side-menu side="left">
-            <header class="bar bar-header bar-dark">
-                <h1 class="title">Projects</h1>
-            </header>
-        </side-menu>
-
-    </side-menus>-->
-</body>
-</html>
+        </scroll>
+    </content>
+</pane>
