--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it" ng-app="batapp">
 <head>
     <meta charset="utf-8">
     <title>BatApp</title>
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="bower_components/ionic/dist/css/ionic.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="bower_components/ionic/dist/js/ionic.js"></script>
     <script src="bower_components/ionic/dist/js/angular/angular.js"></script>
@@ -22,63 +23,9 @@
     <!-- Needed for Cordova/PhoneGap -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <style type="text/css">
-        .scroll{
-            width: 100%;
-            height: 100%;
-        }
-
-        #listacomuni{
-            font-family: 'Open Sans';
-            font-style: bold;
-            font-weight: 800 !important;
-            color: #fff !important;
-            line-height: 1.8;
-        }
-
-        #listacomuni .item{
-            color: #fff;
-            background: none;
-            text-align: center;
-            border: none;
-        }
-
-        #listacomuni .item a{
-            background: none;
-            font-size: 2.2em;
-        }
-
-        #wrapper{
-            background-color: #e74c3c;
-            color: #fff;
-        }
-
-        .mnitem{
-            /*background-color: #343c56;*/
-            width: 150px;
-            margin: 0 auto;
-        }
-
-        #seztitle{
-            font-weight: 100;
-            font-size: 5em;
-            color: #fff;
-            text-align: center;
-            padding: 15px 40px;
-        }
-    </style>
 </head>
-<body ng-app="batapp" ng-controller="mainCtrl">
-    <pane id="wrapper">
-        <content has-header="true" padded="true">
-            <h1 id="seztitle">Cultura</h1>
-            <list id="listacomuni">
-                <item ng-repeat="comune in comuni">
-                    {{comune.title}}
-                </item>
-            </list>
-        </content>
-    </pane>
+<body ng-controller="mainCtrl">
+    <div ng-view></div>
 <!--    <side-menus>
 
         
