--- a/platforms/ios/www/listaassociazioni.html
+++ b/platforms/ios/www/listaassociazioni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" ng-app="batapp">
+<html>
 <head>
     <meta charset="utf-8">
     <title>BatApp</title>
@@ -24,8 +24,22 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
-<body ng-controller="mainCtrl">
-    <div ng-view></div>
+<body ng-app="batapp" ng-controller="mainCtrl">
+    <pane id="wrapper">
+        <content has-header="false" padded="false" scroll="false">
+            <div id="comune">
+                <h1>Andria</h1>
+            </div>
+            <scroll direction="y">
+                <list id="listaassociazioni">
+                    <item ng-repeat="assoc in associazioni">
+                        <p class="nome">{{assoc.nome}}</p>
+                        <p class="posiz"><i class="ion-location"></i>{{assoc.posizione}}</p>
+                    </item>
+                </list>
+            </scroll>
+        </content>
+    </pane>
 <!--    <side-menus>
 
         
