--- a/platforms/ios/www/sezione.html
+++ b/platforms/ios/www/sezione.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" ng-app="batapp">
+<html>
 <head>
     <meta charset="utf-8">
     <title>BatApp</title>
@@ -24,8 +24,19 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
-<body ng-controller="mainCtrl">
-    <div ng-view></div>
+<body ng-app="batapp" ng-controller="mainCtrl">
+    <pane id="wrapper">
+        <content has-header="false" padded="false" scroll="false">
+            <div><h1 id="seztitle">Cultura</h1></div>
+            <scroll direction="y">
+                <list id="listacomuni">
+                    <item ng-repeat="comune in comuni">
+                        {{comune.title}}
+                    </item>
+                </list>
+            </scroll>
+        </content>
+    </pane>
 <!--    <side-menus>
 
         
