--- a/platforms/ios/www/main.html
+++ b/platforms/ios/www/main.html
@@ -3,56 +3,36 @@
         <div class="row">
             <div class="col">
                 <div class="mnitem">
+                    <a href="#cultura">
                         <img src="img/cultura.svg">
                         <p>Cultura</p>
+                    </a>
                 </div>
             </div>
             <div class="col">
                 <div class="mnitem">
-                    <img src="img/ambiente.svg">
-                    <p>Ambiente</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="mnitem">
-                    <img src="img/impgiov.svg">
-                    <p>Imprenditoria Giovanile</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="mnitem">
-                    <img src="img/eventi.svg">
-                    <p>Eventi</p>
+                    <a href="#ambiente">
+                        <img src="img/ambiente.svg">
+                        <p>Ambiente</p>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class="mnitem">
-                    <img src="img/impgiov.svg">
-                    <p>Imprenditoria Giovanile</p>
+                    <a href="#impgiov">
+                        <img src="img/impgiov.svg">
+                        <p>Imprenditoria Giovanile</p>
+                    </a>
                 </div>
             </div>
             <div class="col">
                 <div class="mnitem">
-                    <img src="img/eventi.svg">
-                    <p>Eventi</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="mnitem">
-                    <img src="img/impgiov.svg">
-                    <p>Imprenditoria Giovanile</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="mnitem">
-                    <img src="img/eventi.svg">
-                    <p>Eventi</p>
+                    <a href="#eventi">
+                        <img src="img/eventi.svg">
+                        <p>Eventi</p>
+                    </a>
                 </div>
             </div>
         </div>
