--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -23,6 +23,11 @@
     <!-- Needed for Cordova/PhoneGap -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script>
+        document.addEventListener('deviceready', function() {
+            ionic.Platform.detect();
+        });
+    </script>
 </head>
 <body ng-controller="mainCtrl">
     <div ng-view></div>
