--- a/www/ambiente.html
+++ b/www/ambiente.html
@@ -1,9 +1,9 @@
-<pane id="wrapcultura">
+<pane id="wrapambiente">
     <content has-header="false" padded="false" scroll="false">
-        <div><h1 id="seztitle">Cultura</h1></div>
+        <div><h1 id="seztitle">Ambiente</h1></div>
         <scroll direction="y">
             <list id="listacomuni">
-                <item ng-repeat="comune in comuni" ng-href="#/cultura/{{comune.title|lowercase}}">
+                <item ng-repeat="comune in comuni" ng-href="#/sezassoc/ambiente/{{comune.title|lowercase}}">
                     {{comune.title}}
                 </item>
             </list>
