--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,6 @@
     <title>BatApp</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
-
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="bower_components/ionic/dist/css/ionic.css">
     <link rel="stylesheet" href="css/main.css">
 
@@ -23,6 +21,11 @@
     <!-- Needed for Cordova/PhoneGap -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script>
+        document.addEventListener('deviceready', function() {
+            ionic.Platform.detect();
+        });
+    </script>
 </head>
 <body ng-controller="mainCtrl">
     <div ng-view></div>
