Removed Device Plugin

--- a/platforms/ios/www/ambiente.html
+++ b/platforms/ios/www/ambiente.html
@@ -3,7 +3,7 @@
         <div><h1 id="seztitle">Ambiente</h1></div>
         <scroll direction="y">
             <list id="listacomuni">
-                <item ng-repeat="comune in comuni" ng-href="#/ambiente/{{comune.title|lowercase}}">
+                <item ng-repeat="comune in comuni" ng-href="#/sezassoc/ambiente/{{comune.title|lowercase}}">
                     {{comune.title}}
                 </item>
             </list>
