--- a/platforms/ios/www/cultura.html
+++ b/platforms/ios/www/cultura.html
@@ -3,7 +3,7 @@
         <div><h1 id="seztitle">Cultura</h1></div>
         <scroll direction="y">
             <list id="listacomuni">
-                <item ng-repeat="comune in comuni" ng-href="#/cultura/{{comune.title|lowercase}}">
+                <item ng-repeat="comune in comuni" ng-href="#/sezassoc/cultura/{{comune.title|lowercase}}">
                     {{comune.title}}
                 </item>
             </list>
