--- a/www/listaassociazioni.html
+++ b/www/listaassociazioni.html
@@ -7,7 +7,7 @@
             <list id="listaassociazioni">
                 <item 
                     ng-repeat="assoc in associazioni" 
-                    ng-href="#/sezassoc/{{sezione}}/{{comune}}/{{assoc.nome}}">
+                    ng-href="#/sezassoc/{{sezione}}/{{comune}}/{{assoc.nome}}/{{assoc.id}}">
                     <p class="nome">{{assoc.nome}}</p>
                     <p class="posiz"><i class="ion-location"></i>{{assoc.posizione}}</p>
                 </item>
