--- a/platforms/ios/www/main.html
+++ b/platforms/ios/www/main.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col">
                 <div class="mnitem">
-                    <a href="#cultura">
+                    <a href="#sezassoc/cultura">
                         <img src="img/cultura.svg">
                         <p>Cultura</p>
                     </a>
@@ -11,7 +11,7 @@
             </div>
             <div class="col">
                 <div class="mnitem">
-                    <a href="#ambiente">
+                    <a href="#sezassoc/ambiente">
                         <img src="img/ambiente.svg">
                         <p>Ambiente</p>
                     </a>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col">
                 <div class="mnitem">
-                    <a href="#impgiov">
+                    <a href="#sezassoc/imprenditoriagiovanile">
                         <img src="img/impgiov.svg">
                         <p>Imprenditoria Giovanile</p>
                     </a>
