App structure completed, need to check navigation (works only in the browser

--- a/platforms/ios/www/eventi.html
+++ b/platforms/ios/www/eventi.html
@@ -1,5 +1,5 @@
 <pane id="wrapeventi">
-    <content has-header="true" padded="true" scroll="false">
+    <content padded="true" scroll="false">
         <scroll id="scroller" class="scroll" direction="y">
             <ul id="listaeventi" class="list">
                 <li ng-repeat="assoc in associazioni">
