--- a/platforms/ios/www/main.html
+++ b/platforms/ios/www/main.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col">
                 <div class="mnitem">
-                    <a href="#eventi">
+                    <a href="#sezassoc/tempolibero">
                         <img src="img/tempolib.svg">
                         <p>Sport e Tempo Libero</p>
                     </a>
@@ -47,7 +47,7 @@
             </div>
             <div class="col">
                 <div class="mnitem">
-                    <a href="#eventi">
+                    <a href="#sezassoc/salute">
                         <img src="img/salute.svg">
                         <p>Salute</p>
                     </a>
@@ -65,7 +65,7 @@
             </div>
             <div class="col">
                 <div class="mnitem">
-                    <a href="#eventi">
+                    <a href="#curiosita">
                         <img src="img/curiosita.svg">
                         <p>Curiosit&agrave;</p>
                     </a>
