--- a/www/sezione.html
+++ b/www/sezione.html
@@ -1,4 +1,4 @@
-<pane id="wrap{{sezione | lwnowhitespace}}">
+<pane id="wrap{{sezione}}">
     <a ng-click="doTheBack()" id="back"><i class="ion-arrow-left-c"></i></a>
     <content has-header="true" padded="false" scroll="false">
         <div>
