--- a/www/sezione.html
+++ b/www/sezione.html
@@ -1,5 +1,8 @@
 <pane id="wrap{{sezione}}">
-    <a ng-click="doTheBack()" id="back"><i class="ion-arrow-left-c"></i></a>
+    <div class="bar bar-header">
+        <a class="button icon-left ion-chevron-left button-clear button-dark">Home</a>
+    </div>
+    <!--<a ng-click="doTheBack()" id="back"><i class="ion-arrow-left-c"></i></a>-->
     <content has-header="true" padded="false" scroll="false">
         <div>
             <h1 id="seztitle">{{sezione | capitalize}}</h1>
