--- a/www/sezione.html
+++ b/www/sezione.html
@@ -1,6 +1,6 @@
 <pane id="wrap{{sezione}}">
     <div class="bar bar-header" id="header{{sezione}}">
-        <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="changeView('eventiass')">Home</a>
+        <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="changeView('home')">Home</a>
     </div>
     <content has-header="true" padded="false" scroll="false">
         <div>
