Menu Modified. Page categories created. (branch: mainIntV2)

--- a/www/main.html
+++ b/www/main.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/associazioni">
+                        <a href="#sezassoc/categorie">
                             <img src="img/cultura.svg">
                             <p>Associazioni</p>
                         </a>
