Links to categories menu added. Need to review home, and navigation.

--- a/www/categorie.html
+++ b/www/categorie.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/categorie">
+                        <a href="#sezassoc/cultura">
                             <span class="btncat">
                             <img src="img/cultura.svg">
                             <p>Cultura</p>
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/categorie">
+                        <a href="#sezassoc/ambiente">
                             <span class="btncat">
                             <img src="img/cultura.svg">
                             <p>Ambiente</p>
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/categorie">
+                        <a href="#sezassoc/imprenditoriagiovanile">
                             <span class="btncat">
                             <img src="img/cultura.svg">
                             <p>Imprenditoria Giovanile</p>
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/categorie">
+                        <a href="#sezassoc/tempolibero">
                             <span class="btncat">
                             <img src="img/cultura.svg">
                             <p>Sport e Tempo Libero</p>
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col">
                     <div class="mnitem">
-                        <a href="#sezassoc/categorie">
+                        <a href="#sezassoc/salute">
                             <span class="btncat">
                             <img src="img/cultura.svg">
                             <p>Salute</p>
