--- a/platforms/ios/www/seyf.html
+++ b/platforms/ios/www/seyf.html
@@ -6,6 +6,11 @@
               <img src="img/logoprincipi.png" />
             </h1>
         </div>
+        <div id="infoseyf">
+              <p><i class="ion-location"></i>Via Vecchia Comunale per Tricase 4, 73032 Andrano (LE)</p>
+              <p><i class="ion-ios7-telephone"></i>+39 0832 16 92 249</p>
+              <p><i class="ion-email"></i>info@seyf.eu</p>
+        </div>
         <p class="seyfmain">
             <b>SEYF - South Europe Youth Forum</b> &egrave; un network internazionale di organizzazioni giovanili attiva nella mobilita giovanile, seminari, corsi di formazione, volontariato giovanile, campagne di comunicazione e formazione riguardanti l’educazione, le opportunita e i diritti dei giovani.<br /><br />Lo scopo principale e di gestire una piattaforma telematica (www.seyf.eu) edificata su azioni giovanili e culturali in ambito nazionale ed estero.<br /><br /><span>Inclusione sociale<br />di giovani</span>SEYF lavora per l’inclusione sociale di giovani per incentivare mobilita ed educazione non-formale, cittadinanza attiva e diritto al futuro delle nuove generazioni. Il network di SEYF ha la giusta sostenibilita per gestire una rete che sviluppa azioni condivise.
         </p>
