--- a/platforms/ios/www/evento.html
+++ b/platforms/ios/www/evento.html
@@ -2,7 +2,8 @@
     <ion-content has-header="true" padded="false" scroll="false">
         <div id="map" class="{{animation}} {{mapsize}}">
             <!--<div class="expmap expevt"><i class="ion-close-round"></i>Chiudi</div>-->
-            <div id="mapovrlay" ng-click="espandi()" class="{{mapdisp}}"></div>
+            <!--<div id="mapovrlay" ng-click="espandi()" class="{{mapdisp}}"></div>
+
             <div id="mapcontrols">
                 <button id="btnespandi" class="button button-energized {{espclass}}" ng-click="espandi()">
                     <i class="ion-arrow-expand"></i>
@@ -10,43 +11,43 @@
                 <button id="btnclose" class="button button-energized {{clclass}}" ng-click="chiudi()">
                     <i class="ion-arrow-shrink"></i>
                 </button>
-            </div>
+            </div>-->
             <google-map location="address" type="road" class="map"></google-map>
         </div>
         <ion-scroll class="scroll" direction="y" id="evtscroll">
             <div class="row">
                 <div class="col coldata">                
                     <div id="data">
-                        <div id="giorno">27</div>
-                        <div id="mese">mar</div>
+                        <div id="giorno">{{evento.data[0]}}</div>
+                        <div id="mese">{{evento.data[1] | lowercase}}</div>
                     </div>                
                 </div>
             </div>
             <div class="row maininfo">
                 <div class="col" id="luogo">
                     <i class="ion-clock"></i>
-                    <p>19:15</p>
+                    <p>{{evento.orario}}</p>
                 </div>
             </div>
             <div class="row maininfo">
                 <div class="col" id="luogo">
                     <i class="ion-location"></i>
-                    <p>Questo è il luogo dell'evento</p>
+                    <p>{{evento.posizione}}</p>
                 </div>
             </div>
             <div class="row">
                 <div id="associazione">
-                    <p>Associazione Organizzatrice</p>
+                    <p>{{associazione.nome}}</p>
                 </div>
             </div>
             <div class="row">
                 <div id="nome">
-                    <p>Questo è il nome dell'evento</p>
+                    <p>{{evento.nome}}</p>
                 </div>
             </div>
             <div class="row">
                 <div id="descrizione">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin auctor, augue vel varius posuere, mauris tortor ultrices ipsum, vitae bibend.</p>
+                    <p>{{evento.descrizione}}</p>
                 </div>
             </div>
         </ion-scroll>
