--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -14,6 +14,8 @@
     <!-- ionic/angularjs scripts -->
     <script type="text/javascript" src="lib/js/ionic.bundle.js"></script>
 
+    <script type="text/javascript" src="lib/js/angular/angular-sanitize.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script type="text/javascript" src="cordova.js"></script>
 
@@ -42,6 +44,7 @@
              animation="nav-title-slide-ios7" 
              back-button-type="button-icon button-clear" 
              back-button-icon="ion-ios7-arrow-back"
+             right-buttons="rightButtons"
              id="header"></ion-nav-bar>
 
     <!-- 
