--- a/platforms/ios/www/main.html
+++ b/platforms/ios/www/main.html
@@ -1,5 +1,5 @@
 <ion-view id="homewrapper">
-    <ion-content has-header="true" scroll="true" padded="true">
+    <ion-content has-header="false" scroll="true" padded="true">
         <div class="row">
             <div class="col">
                 <div class="mnitem">
