--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
     <!-- ionic/angularjs scripts -->
     <script type="text/javascript" src="lib/js/ionic.bundle.js"></script>
 
+    <script type="text/javascript" src="lib/js/angular/angular-sanitize.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script type="text/javascript" src="cordova.js"></script>
 
