--- a/www/listacuriosita.html
+++ b/www/listacuriosita.html
@@ -1,12 +1,12 @@
-<ion-view id="wrapcuriosita">
+<ion-view id="wrapcuriosita" title="infoTitle">
     <ion-content has-header="true" padded="false" scroll="true">
         <div id="comune">
             <h1 class="nomecomune">{{comune | capitalize}}</h1>
         </div>
         <ion-scroll id="scroller" class="scroll" direction="y">
             <ion-list id="listaassociazioni" class="list">
-                <ion-item ng-repeat="assoc in associazioni" ng-href="#/curiosita/{{comune}}/{{assoc.nome}}/{{assoc.id}}">
-                    <p class="nome">{{assoc.nome}}</p>
+                <ion-item ng-repeat="cur in curiosita" ng-href="#/curiosita/{{comune}}/{{cur.nome}}/{{cur.id}}">
+                    <p class="nome">{{cur.nome}}</p>
                 </ion-item>
             </ion-list>
         </ion-scroll>
