Test completed. Waiting for submission

--- a/platforms/ios/www/eventiass.html
+++ b/platforms/ios/www/eventiass.html
@@ -13,7 +13,7 @@
                     <span class="posiz"><i class="ion-location"></i>{{evento.posizione}}</span>
                     <span class="time"><i class="ion-clock"></i>{{evento.orario}}</span>
                 </ion-item>
-                <ion-item ng-show="!eventi.length" id="noeventi">L'associazione <br />non ha organizzato ancora nessun evento</ion-item>
+                <ion-item ng-show="!eventi.length" id="noeventi">L'associazione <br />non ha organizzato<br />ancora nessun evento</ion-item>
             </ion-list>
         </ion-scroll>
     </ion-content>
