--- a/www/evento.html
+++ b/www/evento.html
@@ -1,5 +1,5 @@
-<ion-view id="wrapevento">
-    <ion-content has-header="true" padded="false" scroll="false">
+<ion-view id="wrapevento" title="titleEventi">
+    <ion-content has-header="true" padded="false" scroll="true">
         <div id="map" class="{{animation}} {{mapsize}}">
             <!--<div class="expmap expevt"><i class="ion-close-round"></i>Chiudi</div>-->
             <!--<div id="mapovrlay" ng-click="espandi()" class="{{mapdisp}}"></div>
@@ -14,7 +14,8 @@
             </div>-->
             <google-map location="address" type="road" class="map"></google-map>
         </div>
-        <ion-scroll class="scroll" direction="y" id="evtscroll">
+        <!--<ion-scroll class="scroll" direction="y" id="evtscroll">-->
+        <div id="evtscroll">
             <div class="row">
                 <div class="col coldata">                
                     <div id="data">
@@ -50,6 +51,7 @@
                     <p>{{evento.descrizione}}</p>
                 </div>
             </div>
-        </ion-scroll>
+        </div>
+        <!--</ion-scroll>-->
     </ion-content>
 </ion-view>
